<resources>
    <string name="app_name">StrokeMonitor</string>
    <string name="chart">Chart</string>
    <string name="heart_rate_value">Heart Rate value</string>
    <string name="pick_date_and_time">Pick Date and Time</string>
    <string name="push_heart_rate">Push Heart Rate</string>
    <string name="e_mail">E-mail</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="other">Other</string>
    <string name="man">Man</string>
    <string name="women">Women</string>
    <string name="pick_your_birthday">Pick your birthday</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="selected_item">Selected item:</string>
    <string name="submit">Submit</string>
    <string name="congestive_heart_failure_lv_dysfunction">Congestive heart failure / LV dysfunction</string>
    <string name="hypertension">Hypertension</string>
    <string name="diabetes_mellitus">Diabetes Mellitus</string>
    <string name="history_of_stroke_tia_or_thromboembolism">History of stroke, TIA or thromboembolism</string>
    <string name="vascular_disese_history_of_mi_pvd_or_aortic_atherosclerosis">Vascular disese (history of MI, PVD)</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="_65_74_years_old">65-74 years old</string>
    <string name="_75_years_old">≥75 years old</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="clinical_features">Clinical Features</string>
    <string name="selected_chart_type">Selected chart type:</string>

    <string-array name="AAChartType">
        <item>Line</item>
        <item>Bar</item>
        <item>Column</item>
    </string-array>
    <string-array name="Filters">
        <item>Last Hour</item>
        <item>Last Day</item>
        <item>Last Week</item>
    </string-array>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="charts">Charts</string>
    <string name="profile">Profile</string>
    <string name="manual">Manual</string>
    <string name="risc">risc</string>
    <string name="contact_number">Contact number</string>
    <string name="select_filter">Select filter</string>
</resources>
