<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heart_beat_pc_wallpaper"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hiad_10_dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:text="@string/clinical_features"
                android:textSize="30sp" />
                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="2dp"
                    android:hint="@string/_1"
                    android:background="@android:drawable/edit_text"
                    android:text="@string/congestive_heart_failure_lv_dysfunction" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:hint="@string/_1"
                    android:text="@string/hypertension" />

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:hint="@string/_1"
                    android:text="@string/diabetes_mellitus" />

                <CheckBox
                    android:id="@+id/checkbox4"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:hint="@string/_2"
                    android:text="@string/history_of_stroke_tia_or_thromboembolism" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/_1"
                android:text="@string/vascular_disese_history_of_mi_pvd_or_aortic_atherosclerosis" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:text="@string/age"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/clinicalAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.804">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/_1"
                    android:text="@string/_65_74_years_old" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_2"
                    android:text="@string/_75_years_old" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:text="@string/sex"
                android:textSize="30sp" />
            <RadioGroup
                android:id="@+id/clinicalSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.804">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/_1"
                    android:text="@string/female" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_0"
                    android:text="@string/male" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>