<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/heart_beat_pc_wallpaper"
        tools:context=".ui.profile.ProfileFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hiad_10_dp"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/e_mail"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewRisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hiad_10_dp"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/risc"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="32dp">

            <Button
                android:id="@+id/btnRisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/hiad_10_dp"
                android:background="@android:drawable/ic_menu_sort_by_size" />

            <Button
                android:id="@+id/btnOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/hiad_10_dp"
                android:text="@string/log_out" />


        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>